# example_cml

./: .gitignore  README.md  get_data.py  pyproject.toml  train.py
.github/: copilot-instructions.md
.github/actions/lint/: action.yml
.github/actions/preparation/: action.yml
.github/actions/tests/: action.yml
.github/workflows/: ci.yml  training.yml
tests/: test_get_data.py  test_train.py
