[project]
name = "example-cml"
version = "0.1.0"
description = "Example Continuous Machine Learning project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scikit-learn>=1.5",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "radon>=6.0",
    "pytest-cov>=5.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.6",
    "radon>=6.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
pythonpath = [
    ".",
]
addopts = [
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-report=html",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
]
